--- a/mock_home.html
+++ b/mock_home.html
@@ -30,44 +30,176 @@
 				<div class="symptoms-inner-container border-right">
 					<h2 class="center">Pain</h2>
 					<span class="pull-right severity-container">Severity</span><br/><br/>
-					<div class="input-container"><span class="name-container">Headache</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Earache</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Back pain</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Muscle ache</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
+					<div class="input-container">
+						<span class="name-container">Headache</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal pain to Worst pain you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Earache</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal pain to Worst pain you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Back pain</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal pain to Worst pain you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Muscle ache</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal pain to Worst pain you've ever felt</span>
+						</div>
+					</div>
 				</div>
 
 				<div class="symptoms-inner-container border-right">
 					<h2 class="center">Fever and Cold</h2>
 					<span class="pull-right severity-container">Severity</span><br/><br/>
-					<div class="input-container"><span class="name-container">Fever</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Cough</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Sore throat</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Respiratory congestion</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Nasal congestion</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Seasonal allergies</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
+					<div class="input-container">
+						<span class="name-container">Fever</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: 98.6&deg;F to 108&def;F</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Cough</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Incessant, hacking cough</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Sore throat</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Worst pain you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Respiratory congestion</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Cannot breathe / swallow</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Nasal congestion</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Cannot breathe properly</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Seasonal allergies</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal allergies to Worst you've ever felt</span>
+						</div>
+					</div>
 					
 				</div>
 
 				<div class="symptoms-inner-container border-right">
 					<h2 class="center">Gastrointestinal</h2>
 					<span class="pull-right severity-container">Severity</span><br/><br/>
-					<div class="input-container"><span class="name-container">Nausea</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Dizziness</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Motion sickness</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Vomiting</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Heartburn</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Diarrhea</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
+					<div class="input-container">
+						<span class="name-container">Nausea</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimally unsettling to Worst you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Dizziness</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimally unsettling to Cannot see / stand</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Motion sickness</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimally unsettling to Worst you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Vomiting</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal vomiting to Incessant, uncontrollable vomit</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Heartburn</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal pain to Worst pain you've ever felt</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Diarrhea</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal diarrhea to Incessant, uncontrollable diarrhea</span>
+						</div>
+					</div>
 				</div>
 
 				<div class="symptoms-inner-container">
 					<h2 class="center">Skin and Other Infections</h2>
 					<span class="pull-right severity-container">Severity</span><br/><br/>
-					<div class="input-container"><span class="name-container">Itchy skin</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Hives</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Poison ivy</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Athlete's foot</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Ringworm</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
-					<div class="input-container"><span class="name-container">Yeast infection</span><input type="range" min="0" max="10" value = "0" class="pull-right slider"></div>
+					<div class="input-container">
+						<span class="name-container">Itchy skin</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable irritation</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Hives</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable irritation</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Poison ivy</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable irritation</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Athlete's foot</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable irritation</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Ringworm</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable irritation</span>
+						</div>
+					</div>
+					<div class="input-container">
+						<span class="name-container">Yeast infection</span>
+						<div class="slider-container">
+							<input type="range" min="0" max="10" value = "0" class="pull-right slider">
+							<span class="pull-right">Scale: Minimal irritation to Spreading, uncontrollable infection</span>
+						</div>
+					</div>
 				</div>
 				<br/>
 				<div id="button-container"><button id="submit-button">Find my medication!</button></div>
